v1.12.x/developers/contribute/developing-a-new-connector.mdx
---
title: Developing a new Connector
sidebarTitle: Overview
---

# Developing a New Connector

## Overview

There is an ever-increasing source of metadata and it is possible that OpenMetadata doesn't already have implemented the one you need.

On this guide we will go through the steps needed in order to be able to contribute by developing a new connector yourself by using the already implemented MySQL connector as an example.

<Tip>

**Developing a new Connector vs Custom Connectors**

Developing a new connector makes sense if it could be used by many other users. **If you are dealing with a custom solution used only in your case, it makes more sense to actually create your own Custom Connector by following [this guide](/v1.12.x/connectors/custom-connectors)**

</Tip>

## Choose Your Approach

<CardGroup cols={2}>

<Card title="AI-Assisted Development" icon="wand-magic-sparkles" href="/v1.12.x/developers/contribute/developing-a-new-connector/ai-assisted-development">
  Use the scaffold tool and AI skills to generate boilerplate and implement the connector with Claude Code, Cursor, Codex, or any AI tool.
</Card>

<Card title="Manual Development" icon="code" href="/v1.12.x/developers/contribute/developing-a-new-connector/define-json-schema">
  Follow the step-by-step manual guide using MySQL as a reference.
</Card>

</CardGroup>

## Prerequisite

Before starting developing your own connector you need to have the developing environment properly setup and OpenMetadata up and running locally for testing purposes.

Please follow the instructions [here](/v1.12.x/developers/contribute/build-code-and-run-tests)

## AI-Assisted Steps

1. [Install AI Skills](/v1.12.x/developers/contribute/developing-a-new-connector/ai-assisted-development/install-skills)
2. [Scaffold the Connector](/v1.12.x/developers/contribute/developing-a-new-connector/ai-assisted-development/scaffold-connector)
3. [Build with AI](/v1.12.x/developers/contribute/developing-a-new-connector/ai-assisted-development/build-with-ai)

## Manual Steps

1. [Define the JSON Schema](/v1.12.x/developers/contribute/developing-a-new-connector/define-json-schema)
2. [Develop the Ingestion Code](/v1.12.x/developers/contribute/developing-a-new-connector/develop-ingestion-code)
3. [Apply UI Changes](/v1.12.x/developers/contribute/developing-a-new-connector/apply-ui-changes)
4. [Create the Java ClassConverter](/v1.12.x/developers/contribute/developing-a-new-connector/create-java-class-converter)
5. [Test it](/v1.12.x/developers/contribute/developing-a-new-connector/test-it)
6. [Update the Documentation](/v1.12.x/developers/contribute/developing-a-new-connector/update-documentation)

## References

### Previous Webinars

There are some interesting webiners that cover an overview of the ingestion framework as well as a hands-on workshop for creating a new connector.

Note that while specific technicalities might be outdated (patterns for naming files or functions), the overall structure, flow and abstractions described in the videos are still relevant. For any nuances you can look at the current state of the ingestion code to see what is the best practice.

1. [How does the Ingestion Framework Work?](https://youtu.be/i7DhG_gZMmE)
2. [How to Create your Own OpenMetadata Connector](https://youtu.be/ZvA4wuvINFA)
